--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,7 +7,12 @@ body{
 //COLORS
 
 //FONTS
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap');
 
 //HEADINGS
 
 //LINKS
+
+*{
+    font-family: 'Old Standard TT', serif;
+}
