header footer and index kinda done, not really but

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,9 +1,72 @@
 @import url("https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap");
 body {
-  background-color: aquamarine;
+  background-color: #C4C4C4;
 }
 
 * {
   font-family: 'Old Standard TT', serif;
+}
+
+.links {
+  float: right;
+  margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.links a {
+  margin: 20px;
+  font-size: 24pt;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+h1 {
+  color: white;
+  font-size: 100pt;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#headerbone {
+  margin: 20px;
+}
+
+.footer {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer h2 {
+  font-size: 24pt;
+}
+
+.both {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.both .options {
+  text-align: center;
+}
+
+.both .options h3 {
+  font-size: 24pt;
 }
 /*# sourceMappingURL=style.css.map */
