--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -57,7 +57,8 @@ margin-right: auto;}
     .options{
         text-align: center;
         h3{
-            font-size:24pt;
+            font-size:48pt;
+            color: white;
         }
     }
 }
