--- a/src/style/style.css
+++ b/src/style/style.css
@@ -30,6 +30,7 @@ h1 {
   font-size: 100pt;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
   text-align: center;
 }
 
@@ -54,6 +55,7 @@ h1 {
 }
 
 .both {
+  margin-top: -100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
