--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -35,6 +35,7 @@ h1{color: white;
 font-size: 100pt;
 margin-left: auto;
 margin-right: auto;
+margin-top:50px;
 text-align: center;}
 
 #headerbone{
@@ -52,6 +53,7 @@ text-align: center;}
 margin-right: auto;}
 
 .both{
+    margin-top: -100px;
     display:flex;
     justify-content: center;
     .options{
