--- a/src/style/style.css
+++ b/src/style/style.css
@@ -72,4 +72,106 @@ h1 {
   font-size: 48pt;
   color: white;
 }
+
+.forum {
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.forum .tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.forum .tags h3 {
+  font-size: 24pt;
+}
+
+.forum .tags div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.forum .tags div h5 {
+  padding-left: 10px;
+  font-size: 16pt;
+}
+
+.forum .newpost {
+  font-style: italic;
+  font-size: 24pt;
+}
+
+.forum .forumpost {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.forum .forumpost h3 {
+  margin-bottom: 0;
+  font-size: 24pt;
+}
+
+.forum .forumpost img {
+  width: 5%;
+}
+
+.forum .forumpost .break {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  height: 0;
+}
+
+.forum .forumpost h6 {
+  margin-top: 10px;
+  font-size: 16pt;
+  margin-right: 20px;
+}
+
+.forum .forumpost h5 {
+  margin-top: 10px;
+  font-size: 12pt;
+}
+
+.container {
+  width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profiles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.profiles .item {
+  width: 30%;
+  padding: 1%;
+  padding-bottom: 5%;
+  /* Same as width, sets height */
+  margin-bottom: 2%;
+  /* (100-32*3)/2 */
+  position: relative;
+}
+
+.profiles .item img {
+  width: 90%;
+}
+
+.profiles .item h4 {
+  font-size: 24pt;
+  margin-top: 10px;
+}
 /*# sourceMappingURL=style.css.map */
