--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -131,4 +131,52 @@ margin-right: auto;}
         }
       }
   }
-  
+
+  form{
+      margin-left: 10%;
+      label{ color:white;
+            font-size: 16pt;
+            border:none;}
+    input{
+        outline:none;
+        box-shadow: none;
+        margin-top: 10px;
+        border: none;
+    }
+  }
+  .next{
+    background-color: black;
+    color:white;
+    margin-top: 20px;
+    border: none;
+    padding:10px;
+    padding-left:20px;
+    padding-right: 20px;
+    border: none;
+}
+#crtpost{
+    margin-left:10%;
+}
+
+textarea{margin-left:10%;
+    border: none;
+}
+.insidePost{
+    h2{
+        font-size:24pt;
+        margin-left: 10%;
+        margin-right:10%;
+    }
+    p{
+        font-size:12pt;
+        margin-left: 10%;
+        margin-right:10%;
+    }
+    h5{
+        font-size:16pt;
+        margin-left:10%;
+        margin-right:10%;
+        margin-top:10px;
+        margin-bottom:10px;
+    }
+}
