--- a/src/style/style.css
+++ b/src/style/style.css
@@ -232,4 +232,9 @@ textarea {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+#description {
+  margin-left: 0;
+  margin-top: 10px;
+}
 /*# sourceMappingURL=style.css.map */
