--- a/src/style/style.css
+++ b/src/style/style.css
@@ -237,4 +237,90 @@ textarea {
   margin-left: 0;
   margin-top: 10px;
 }
+
+#randomimg {
+  width: 300px;
+}
+
+#dogPic {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  margin-bottom: 15px;
+}
+
+#center {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#profile {
+  margin-left: 10%;
+}
+
+#profile img {
+  max-width: 400px;
+}
+
+#profile h2 {
+  font-size: 24pt;
+}
+
+#profile h3 {
+  font-style: italic;
+}
+
+#profile p {
+  max-width: 300px;
+}
+
+.newpost {
+  margin-left: 3%;
+  font-size: 16pt;
+  font-style: italic;
+}
+
+.forumpost {
+  margin-left: 10%;
+}
+
+.forumpost a {
+  font-size: 24pt;
+}
+
+.forumpost h6 {
+  font-size: 12pt;
+  margin-top: 10px;
+}
+
+#comment {
+  margin-right: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#comment input {
+  width: auto;
+  line-height: 36px;
+}
+
+#usrform input {
+  width: 200px;
+}
+
+#usrform textarea {
+  width: 250px;
+  height: 200px;
+  margin-left: 0;
+}
+
+#breed {
+  height: 37px;
+}
 /*# sourceMappingURL=style.css.map */
