--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -162,6 +162,7 @@ textarea{margin-left:10%;
     border: none;
 }
 .insidePost{
+
     h2{
         font-size:24pt;
         margin-left: 10%;
@@ -235,7 +236,7 @@ textarea{margin-left:10%;
     }
 }
     #comment{
-        margin-right:10%;
+        margin-left:10%;
         display: flex;
         flex-direction: column;
         input{
